<?xml version="1.0"?>
<package format="3">
  <name>ros2_rust_launch_demo</name>
  <version>0.1.0</version>
  <description>Rust-based ROS2 demo with Python launch support</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>

</package>
